--- a/less/navigation.less
+++ b/less/navigation.less
@@ -23,13 +23,13 @@ nav {
     .dashed-border(.5rem);
     h1 {
       width: 100%;
-      font-size: 7rem;
+      font-size: 4rem;
       text-align: center;
       margin-bottom: 3rem;
     }
 
     .navigation-list {
-      font-size: 4rem;
+      font-size: 2rem;
       width: 100%;
       justify-content: space-evenly;
     }
